compressed images, changed recommendation cards, modified cards so that they no longer overflow

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ html, body {
     scroll-snap-align: center;
 }
 
-a.btn-white {
+a.btn-transparent {
     background-color: transparent;
     border: solid 1px white;
     color: white;
@@ -132,7 +132,7 @@ a.btn-white {
     cursor: pointer;
     border-radius: 5px;
 }
-a.btn-white:hover {
+a.btn-transparent:hover {
     border: solid 1px gray;
     color: gray;
     transition: 0.2s;
@@ -153,6 +153,18 @@ a.btn-default:hover {
     border: solid 1px gray;
     color: gray;
     transition: 0.2s;
+}
+a.btn-white {
+    background-color: white;
+    color: black;
+    padding: 3%;
+    font-kerning: auto;
+    /* text-align: center; */
+    text-decoration: none;
+    display: inline-block;
+    /* font-size: 16px; */
+    cursor: pointer;
+    border-radius: 5px;
 }
 
 .modal {
@@ -178,6 +190,7 @@ a.btn-default:hover {
     box-shadow: 0px 30px 50px 4px rgba(0,0,0,0.05);
     /* margin: 15% auto; */
     padding: 5%;
+    margin: 10%;
     /* border: 1px solid #888; */
     width: 90%;
     height: 90%;
@@ -227,6 +240,8 @@ a.btn-default:hover {
     padding: 2%;
     margin: 2%;
     background: white;
+    display: flex;
+    flex-direction: column;
     
     /* display: flex; */
     border-radius: 10px;
@@ -257,6 +272,13 @@ a.btn-default:hover {
     display: inline-flex;
 }
 
+.card-title .name {
+    padding: 1%;
+    margin: 1%;
+    justify-self: center;
+    align-self: center;
+}
+
 .card-title img.avatar {
     width: 20%;
     height: auto;
@@ -264,12 +286,19 @@ a.btn-default:hover {
     margin: 0;
     padding: 0;
     display: inline-flex;
+    border: solid 7px white;
+}
+.card-body {
+    width: 100%;
+    height: 100%;
+    padding: 10% 0;
 }
 .card-footer {
     width: 100%;
     height: 20%;
+    bottom: 0;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
 }
 
@@ -437,6 +466,12 @@ a.btn-default:hover {
 
 .recommendation {
     .recommendation-item {
+        a.tabelog {
+            /* border: 1px solid orange; */
+            padding: 1% 0;
+            text-decoration: none;
+            color: orange;
+        }
         .recommendation-side {
             padding: 1% 2%;
             margin: auto;
@@ -445,7 +480,7 @@ a.btn-default:hover {
             .recommendation-image {
                 max-width: 100%;
                 max-height: 100%;
-                border-radius: 5px;
+                border-radius: 10px;
                 
             }
         }
